@@ -18,16 +18,6 @@
     factory=".security.AccessControlList"
   />
 
-  <subscriber
-    for=".events.ICompilationErrorEvent"
-    handler=".subscribers.on_compilation_error"
-    />
-
-  <subscriber
-    for=".events.IExecutionErrorEvent"
-    handler=".subscribers.on_execution_error"
-    />
-
   <adapter
     for=".interfaces.IRestable"
     provides=".interfaces.IRest"
