@@ -1,12 +1,11 @@
 from zope.untrustedpython.interpreter import CompiledProgram
-from zope.event import notify
 
-from .events import ExecutionErrorEvent, CompilationErrorEvent
+from .exceptions import ExecutionError, CompilationError
 
 
 class Compiler(CompiledProgram):
-    """ Compile the source code contained in the 'code' property.
-    """
+    """Compile the source code contained in the 'code' property."""
+
     def __init__(self, container):
         self.source = getattr(container, 'code', '')
         self.code = compile(
@@ -16,6 +15,7 @@ class Compiler(CompiledProgram):
 
 
 class FormulaContainer(object):
+    """Code execution handler."""
 
     def compile(self):
         try:
@@ -23,8 +23,7 @@ class FormulaContainer(object):
         except Exception, e:
             self._compiled_code = None
             self._executable = None
-            notify(CompilationErrorEvent(e, self))
-            return False
+            raise CompilationError(e, self)
         self._executable = {}
         self._compiled_code.exec_(self._executable)
         return True
@@ -38,7 +37,7 @@ class FormulaContainer(object):
             try:
                 return self._executable[func](*args, **kwargs)
             except Exception, e:
-                notify(ExecutionErrorEvent(e, self))
+                raise ExecutionError(e, self)
 
     def execute(self, func, *args, **kwargs):
         return self._execute(func, *args, **kwargs)
